--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,8 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build Hello World",
-            "command": "nim c -d:release --opt:size --checks:off --stackTrace:off hello.nim; strip -s hello.exe",
+            "label": "Debug",
+            "command": "nim c -d:debug -d:useMalloc --mm:arc batchman.nim",
             "type": "shell",
             "args": [],
             "problemMatcher": [
@@ -16,8 +16,8 @@
         },
 
         {
-            "label": "Build Batchman",
-            "command": "nim c -d:release --opt:size --checks:off --stackTrace:off batchman.nim; strip -s batchman.exe; copy batchman.exe \"C:\\Users\\b.duncan\\Documents\\git\\bin\"",
+            "label": "Release",
+            "command": "nim c -d:release -d:useMalloc --passC:-flto --passL:-flto --opt:size --checks:off --stackTrace:off --mm:arc batchman.nim; strip -s batchman.exe; copy batchman.exe \"G:\\Programs\\PATHsoftware\"",
             "type": "shell",
             "args": [],
             "problemMatcher": [
